docs/pages/versions/v55.0.0/sdk/video-thumbnails.mdx
---
modificationDate: April 02, 2026
title: VideoThumbnails
description: A library that allows you to generate an image to serve as a thumbnail from a video file.
sourceCodeUrl: 'https://github.com/expo/expo/tree/main/packages/expo-video-thumbnails'
packageName: 'expo-video-thumbnails'
platforms: ['android', 'ios', 'tvos', 'expo-go']
isDeprecated: true
---

import APISection from '~/components/plugins/APISection';
import { APIInstallSection } from '~/components/plugins/InstallSection';
import { SnackInline } from '~/ui/components/Snippet';

> **warning** **[Deprecated](/more/release-statuses/#deprecated):** Video Thumbnails library has been deprecated in favor of [`generateThumbnailsAsync`](video.mdx#generatethumbnailsasynctimes-options) from [`expo-video`](video.mdx). `expo-video-thumbnails` is not receiving patches and will be removed in SDK 56.

`expo-video-thumbnails` allows you to generate an image to serve as a thumbnail from a video file.

## Installation

<APIInstallSection />

## Usage

<SnackInline label='Video Thumbnails' dependencies={['expo-video-thumbnails']}>

```jsx
import { useState } from 'react';
import { StyleSheet, Button, View, Image, Text } from 'react-native';
import * as VideoThumbnails from 'expo-video-thumbnails';

export default function App() {
  const [image, setImage] = useState(null);

  const generateThumbnail = async () => {
    try {
      const { uri } = await VideoThumbnails.getThumbnailAsync(
        'https://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4',
        {
          time: 15000,
        }
      );
      setImage(uri);
    } catch (e) {
      console.warn(e);
    }
  };

  return (
    <View style={styles.container}>
      <Button onPress={generateThumbnail} title="Generate thumbnail" />
      {image && <Image source={{ uri: image }} style={styles.image} />}
      <Text>{image}</Text>
    </View>
  );
}

const styles = StyleSheet.create({
  container: {
    flex: 1,
    justifyContent: 'center',
    alignItems: 'center',
    backgroundColor: '#F5FCFF',
  },
  image: {
    width: 200,
    height: 200,
  },
});
```

</SnackInline>

## API

```js
import * as VideoThumbnails from 'expo-video-thumbnails';
```

<APISection packageName="expo-video-thumbnails" apiName="VideoThumbnails" />
